# SQLLocalEditor

./: .gitignore  .qmlls.ini  CMakeLists.txt
.cache/clangd/index/: main.cpp.36E0FDABC0AA7BDD.idx  main.cpp.E4F614AE1080B147.idx
qml/: Main.qml  Theme.qml  qmldir
qml/components/: AppButton.qml  CanvasGrid.qml  CreateTableButton.qml  Navbar.qml  Navtab.qml  TableNode.qml
src/: main.cpp
src/models/: column.h  foreignkey.h  schemamodel.cpp  schemamodel.h  tablenode.h
