cmake_minimum_required(VERSION 3.16)
project(SQLLocalEditor VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(Qt6 REQUIRED COMPONENTS Quick Qml Sql)

qt_standard_project_setup(REQUIRES 6.8)

file(GLOB_RECURSE CPP_SOURCES CONFIGURE_DEPENDS src/*.cpp)
file(GLOB_RECURSE QML_FILES CONFIGURE_DEPENDS
    RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
    qml/*.qml
)

qt_add_executable(appSQLLocalEditor ${CPP_SOURCES})

qt_add_qml_module(appSQLLocalEditor
    URI SQLLocalEditor
    VERSION 1.0
    QML_FILES ${QML_FILES}
)

set_target_properties(appSQLLocalEditor PROPERTIES
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(appSQLLocalEditor
    PRIVATE Qt6::Quick Qt6::Qml Qt6::Sql
)

include(GNUInstallDirs)
install(TARGETS appSQLLocalEditor
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
